--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,10 +1,4 @@
-﻿/* 引入自定义字体 (原有的黄令东齐伋体) */
-@font-face {
-  font-family: 'Font';
-  src: url('../assets/黄令东齐伋体.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
+﻿
 
 /* --- 谷歌字体本地化指南 --- */
 /* 步骤：
